--- a/SoundLove/SoundLove/aboutUs.html
+++ b/SoundLove/SoundLove/aboutUs.html
@@ -1,5 +1,5 @@
 <body>
-	<div style="color:#ffffff; font-size: 18px; font-family: Lato-Regular; margin-top:0px; padding-top:0px">
-		<p>Vergiss den Alltag und schalte ab, denn die Festival Saison ist gestartet. Doch bei über 1.000 Festivals in ganz Europe ist es schwer den Überblick zu behalten. Wir von FestivaLama haben eine App entwickelt mit der Du spielend einfach den Überblick behalten kannst und täglich neue Vorschläge erhältst.<br><br>Über 1.000 Festivals in Europe<br>Über 10.000 Artists<br><br>Unsere App lernt was Dir gefällt und zeigt Dir nur Vorschläge an die zu Dir passen könnten.<br><br>Wir wünschen Dir eine tolle Zeit und viel Spaß mit der App!<br><br>Dein FestivaLama Team</p>
+	<div style="color:#FFFFFF; opacity:0.5; font-size: 18px; font-family: Montserrat; margin-top:0px; padding-top:0px">
+        <p>Es ist Zeit für Großes, es ist Zeit für Genuss. Lass Dich von einem Konzert begeistern und berauschen. Um etwas aufregendes zu finden, empfehlen wir Dir aus über 2.000 Möglichkeiten die passenden Konzerte. Durch uns verpasst Du nie wieder ein Konzert deiner Lieblingskünstler. Wenn es mal etwas anderes sein soll, dann verwöhnen wir Dich mit neuen Tips, die zu deinem Musikgeschmack passen. Außerdem zeigen wir Dir, wer von deinen Freunden und Bekannten auch auf ein Konzert geht - oft macht Musik gemeinsam noch mehr Freude. Wir wünschen Dir eine tolle Zeit und viel Spaß mit der App!<br><br>Dein SoundLove Team</p>
 	</div>
 </body>
